
Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
------------------------------

Apache Solr integration 7.x-1.0-xxxx, 2011-xx-xx
------------------------------
#1097976 by Nick_vh, jpmckinney: Fixed Use ShowFileRequestHandler, gettableFiles is deprecated.
#1342134 by Nick_vh: Fixed 'Creating default object from empty value" Notice in node access and indexing test.
#1341860 by pwolanin: Fixed Notice: Undefined index: fq in apachesolr_search_conditions_default() (line 401 of apachesolr_search().module).
#1053126 by jpmckinney, Nick_vh | pwolanin: Remove duplicate sort hooks in 7.x? follow-up.
#1053126 by jpmckinney, Nick_vh | pwolanin: Remove duplicate sort hooks in 7.x?.
#1341854 by pwolanin: Pass the query object into hooks altering search results.
#1340552 by pwolanin: Make facet generation more flexible/overrideable.
#1341840 by pwolanin: Fix for undefined index 'core_search' while running tests.
#1271964 by Nick_vh | wmostrey: Fix for no way to delete content recommendation blocks.
#1314406 by Nick_vh, scor: Fixed De-duplication of the apachesolr_search_execute() and apachesolr_search_user_defined_search_page().
#1161538 by Nick_vh, pwolanin | domidc: Fixed The numeric field id should not be used for Solr index field names.
#1333904 by Nick_vh | vrc3: Restore flexible 'results per page' option.
#1161444 by Nick_vh | cpliakas: Modify Facet API field definitions to reflect API change for the 'query type" key.
#1334216 by Nick_vh: Fixed Convert all static parameters to drupal_static().
#1328854 by Josh Waihi: Added Tag cron database queries to allow modules to alter conditions of updating index table.
#1323758 by Nick_vh | Frippuz: Fixed hook_apachesolr_process_results() make no impact on results.
#1265124 by InternetDevels.Com: Fixed Not output pager in search results.
#1324842 by Nick_vh: Added setAvailableSorts to the api.
#1000532 by craigmc, jpmckinney: Fixed Non-current/valid Node Types not excluded from index.